--- a/style.css
+++ b/style.css
@@ -1,35 +1,61 @@
 body {
-    font-family: Arial, sans-serif;
     margin: 0;
-    padding: 0;
-    line-height: 1.6;
+    font-family: "Kanit", serif;
 }
-
-header {
-    background: #333;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
+.header-image {
+    position: relative;
+    width: 100%;
+    height: 200px;
+    background: url('img/bg.jpg') no-repeat center center;
+    background-size: cover;
 }
-
-main {
+.content {
     padding: 20px;
 }
-
-.gallery {
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-}
-
-.images img {
-    width: 200px;
-    height: auto;
-    border-radius: 5px;
-}
-
-footer {
+h1 {
     text-align: center;
+}
+.content h4 {
+    text-align: center;
+    color: #9f9f9f;
+}
+ul {
+    text-align: left;
+    padding-left: 30px;
+}
+ol {
+    text-align: left;
+    list-style-type: decimal;
+    padding-left: 30px;
+}
+.main-image {
+    text-align: center;
+    margin-bottom: 10px;
+}
+.main-image img {
+    width: 80%;
+    max-width: 800px;
+    border-radius: 10px;
+}
+.container {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
     padding: 10px;
-    background: #f4f4f4;
+}
+.box {
+    flex: 1;
+    max-width: 33%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.box img {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    object-fit: cover;
+}
+a {
+    padding: 5px;
 }
