--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body {
 .header-image {
     position: relative;
     width: 100%;
-    height: 250px;
-    background: url('img/S__70680585.jpg') no-repeat center center;
+    height: 200px;
+    background: url('img/S__70680585jpg') no-repeat center center;
     background-size: cover;
 }
 
