--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     position: relative;
     width: 100%;
     height: 200px;
-    background: url('img/S__70680585jpg') no-repeat center center;
+    background: url('img/S__70680585.jpg') no-repeat center center;
     background-size: cover;
 }
 
